# CXXTutorial2024

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: host-ninja-linux.yml  hosted-ninja-mac.yml  hosted-ninja-submmit.yml  hosted-ninja-vcpkg-linux-submit.yml  hosted-ninja-vcpkg-mac-submmit.yml  hosted-ninja-vcpkg-win-submit.yml
00Algorithm/YanWeiMin/01绪论/: CMakeLists.txt  Scanf.cxx  Status.hxx  StructPointer.cxx  VariadicFunction.cxx
00AlgorithmPractices/00PlayWithAlgorithms/02-Sorting-Basic/01-Selection-Sort/: CMakeLists.txt  main.cxx
00AlgorithmPractices/00PlayWithAlgorithms/02-Sorting-Basic/02-Selection-Sort-Using-Template/: CMakeLists.txt
00AlgorithmPractices/00PlayWithAlgorithms/02-Sorting-Basic/05-Insertion-Sort/: CMakeLists.txt  SelectionSort.hxx
00AlgorithmPractices/00PlayWithAlgorithms/02-Sorting-Basic/06-Insertion-Sort-Advance/: main.cxx
00AlgorithmPractices/00PlayWithAlgorithms/02-Sorting-Basic/Optional-02-Bubble-Sort/: main.cxx
00AlgorithmPractices/00PlayWithAlgorithms/02-Sorting-Basic/Optional-03-Shell-Sort/: CMakeLists.txt
00AlgorithmPractices/01CodeCarl/BinarySearch/MinimunLengthSubArray/: Solution.cxx  Solution02.cxx
00AlgorithmPractices/01CodeCarl/BinarySearch/RemoveElement/: Solution.cxx  Solution02.cxx
00AlgorithmPractices/01CodeCarl/BinarySearch/SquareOfOrderedArray/: Solution.cxx
00AlgorithmPractices/01CodeCarl/BinarySearch/SumOfIntervals/: Solution.cxx
00AlgorithmPractices/01CodeCarl/BinarySearch/Version01/: Solution.cxx  Solution02.cxx
00AlgorithmPractices/01CodeCarl/LinkNode/RemoveElement/: Solution.cxx
00CMakePractices/: CMakeLists模板.md
00CMakePractices/00BasePractices/chapter01/: CMakeLists.txt
00CMakePractices/00BasePractices/chapter01/policy_example/: CMakeLists.txt
00CMakePractices/00BasePractices/chapter01/policy_example/src/: main.cpp
00CMakePractices/00BasePractices/chapter01/simple_executable/src/: main.cpp
00CMakePractices/00BasePractices/chapter02/: CMakeLists.txt
00CMakePractices/00BasePractices/chapter02/component1/: CMakeLists.txt
00CMakePractices/00BasePractices/chapter02/component_interface/: CMakeLists.txt
00CMakePractices/00BasePractices/chapter02/component_interface/include/framework/components/: component_interface.hpp
00CMakePractices/00BasePractices/chapter03/: CMakeLists.txt
00CMakePractices/00BasePractices/chapter03/hello_header_only/: CMakeLists.txt
00CMakePractices/00BasePractices/chapter03/hello_object_lib/: CMakeLists.txt
00CMakePractices/00BasePractices/chapter03/hello_object_lib/src/: hello_object.cpp
00CMakePractices/01CMakeTutorial-Demo/CMakeLists-1-Test/: CMakeLists.txt  test01.cxx
00CMakePractices/02cmake-3.29.2-tutorial-source/: README.txt
00CMakePractices/02cmake-3.29.2-tutorial-source/Step1/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
00CMakePractices/02cmake-3.29.2-tutorial-source/Step2/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
00CMakePractices/02cmake-3.29.2-tutorial-source/Step2/MathFunctions/: CMakeLists.txt  MathFunctions.cxx  mysqrt.cxx
00CMakePractices/02cmake-3.29.2-tutorial-source/Step3/: CMakeLists.txt  tutorial.cxx
00CMakePractices/02cmake-3.29.2-tutorial-source/Step3/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
00CMakePractices/Tutorial/00Demo/: CMakeLists.txt  calc.hxx  doc.md  implementation.cxx  main.cxx  storage.cxx
00CMakePractices/Tutorial/01Demo/: CMakeLists.txt  build.bat
00CMakePractices/Tutorial/01Demo/GameMap/: implementation.cxx
00CMakePractices/Tutorial/01Demo/Main/: main.cxx
00CMakePractices/Tutorial/01Demo/Player/: implementation.cxx
00CMakePractices/Tutorial/01Demo/include/: GameMap.hxx  Player.hxx
00CXXPractices/00ProfessionalCXX23Edition6/Examples/Ch00/AirlineTicket/: AirlineTicket.cpp  AirlineTicket.cppm  AirlineTicketTest.cpp  CMakeLists.txt
00CXXPractices/00ProfessionalCXX23Edition6/Examples/Ch00/AirlineTicket/build.ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  Ticket  build.ninja
00CXXPractices/00ProfessionalCXX23Edition6/Examples/Ch01/02_Namespaces/: CMakeLists.txt  usingnamespaces.cxx
00CXXPractices/00ProfessionalCXX23Edition6/Examples/Ch01/03_Variables/: 01_variables.cxx  02_types.cxx  03_numeric_limits.cxx  04_casting.cxx  CMakeLists.txt
00CXXPractices/00ProfessionalCXX23Edition6/Examples/Ch01/03_Variables/build.ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  Variables  build.ninja
00CXXPractices/00ProfessionalCXX23Edition6/Examples/Ch01/04_Operators/: operators.cpp
00CXXPractices/00ProfessionalCXX23Edition6/Examples/Ch01/05_Enumerations/: CMakeLists.txt  StronglyTypedEnums.cxx
00CXXPractices/00ProfessionalCXX23Edition6/Examples/Ch01/05_Enumerations/build.ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  Enumerations  build.ninja
00CXXPractices/00ProfessionalCXX23Edition6/Examples/Ch01/06_StructTest/: CMakeLists.txt  employee.cppm  structtest.cxx
00CXXPractices/00ProfessionalCXX23Edition6/Examples/Ch01/06_StructTest/build.ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  StructTest  build.ninja
00CXXPractices/00ProfessionalCXX23Edition6/Examples/Ch01/21_UniformInitialization/: 02_DesignatedInitializers.cxx
00CXXPractices/00ProfessionalCXX23Edition6/Examples/Ch01/23_const/: const.cxx  (+1 more)
00CXXPractices/00ProfessionalCXX23Edition6/Examples/Ch01/26_References/: 01_ReferenceVariables.cxx  02_ReferenceDataMembers.cxx  03_ReferenceParameters.cxx  04_ConstReferenceParameters.cxx  05_OddsEvensPtrs.cxx  06_OddsEvensRefs.cxx  07_OddsEvensVector.cxx  CMakeLists.txt
00CXXPractices/02CPPGuideBook/01Demo/: a.out  main.cxx
00CXXPractices/02CPPGuideBook/02Demo/: main.cxx
00CXXPractices/02CPPGuideBook/LiftTime/: CMakeLists.txt  ClassTest.cxx  main.cxx
00CXXPractices/Tutorial/01.1/: Hello_World.cxx
00CXXPractices/Tutorial/01.2/: a.out  standard_and_compiler.cxx
00CXXPractices/Tutorial/01.3/: calc.cxx
00CXXPractices/Tutorial/10.1/: CMakeLists.txt  Header.hxx
00DataStructurePractices/Base/: 算法基础知识.md
00DataStructurePractices/LinkedList/DoubleFoldRoundLinkedList/: CMakeLists.txt  dclink.hxx  dclinkTest.cxx
docs/: CMake笔记-坚果云.md
src/: main.cxx
(+39 files in other folders)
